* scroll.c (do_scrolling): Work around GCC bug 48228.

See <http://gcc.gnu.org/bugzilla/show_bug.cgi?id=48228>.